@@ -954,7 +954,7 @@
         <title>Exercises</title>
         <exercise number="C20" xml:id="exercise-SD-C20">
             <statement>
-                <p>Consider the matrix <m>A</m> below.  First, show that <m>A</m> is diagonalizable by computing the geometric multiplicities of the eigenvalues and quoting the relevant theorem.  Second, find a diagonal matrix <m>D</m> and a nonsingular matrix <m>S</m> so that <m>\similar{A}{S}=D</m>.  (See <xref ref="exercise-EE-C20" acro="EE.C20"/> for some of the necessary computations.)<me>A=
+                <p>Consider the matrix <m>A</m> below.  First, show that <m>A</m> is diagonalizable by computing the geometric multiplicities of the eigenvalues and quoting the relevant theorem.  Second, find a diagonal matrix <m>D</m> and a nonsingular matrix <m>S</m> so that <m>\similar{A}{S}=D</m>.  (See <xref ref="exercise-EE-C21" acro="EE.C21"/> for some of the necessary computations.)<me>A=
                 \begin{bmatrix}
                 18 &amp; -15 &amp; 33 &amp; -15\\
                 -4 &amp; 8 &amp; -6 &amp; 6\\
@@ -963,12 +963,12 @@
                 \end{bmatrix}</me></p>
             </statement>
             <solution xml:id="solution-SD-C20">
-                <p>Using a calculator, we find that <m>A</m> has three distinct eigenvalues, <m>\lambda=3,\,2,\,-1</m>, with <m>\lambda=2</m> having algebraic multiplicity two, <m>\algmult{A}{2}=2</m>.  The eigenvalues <m>\lambda=3,\,-1</m> have algebraic multiplicity one, and so by <xref ref="theorem-ME" acro="ME"/> we can conclude that their geometric multiplicities are one as well.  Together with the computation of the geometric multiplicity of <m>\lambda=2</m> from <xref ref="exercise-EE-C20" acro="EE.C20"/>, we know<md>
+                <p>Using a calculator, we find that <m>A</m> has three distinct eigenvalues, <m>\lambda=3,\,2,\,-1</m>, with <m>\lambda=2</m> having algebraic multiplicity two, <m>\algmult{A}{2}=2</m>.  The eigenvalues <m>\lambda=3,\,-1</m> have algebraic multiplicity one, and so by <xref ref="theorem-ME" acro="ME"/> we can conclude that their geometric multiplicities are one as well.  Together with the computation of the geometric multiplicity of <m>\lambda=2</m> from <xref ref="exercise-EE-C21" acro="EE.C21"/>, we know<md>
                     <mrow>\geomult{A}{3}&amp;=\algmult{A}{3}=1&amp;
                     \geomult{A}{2}&amp;=\algmult{A}{2}=2&amp;
                     \geomult{A}{-1}&amp;=\algmult{A}{-1}=1</mrow>
                 </md>.  This satisfies the hypotheses of <xref ref="theorem-DMFE" acro="DMFE"/>, and so we can conclude that <m>A</m> is diagonalizable.</p>
-                <p>A calculator will give us four eigenvectors of <m>A</m>, the two for <m>\lambda=2</m> being linearly independent presumably.  Or, by hand, we could find basis vectors for the three eigenspaces.  For <m>\lambda=3,\,-1</m> the eigenspaces have dimension one, and so any eigenvector for these eigenvalues will be multiples of the ones we use below.  For <m>\lambda=2</m> there are many different bases for the eigenspace, so your answer could vary.  Our eigenvectors are the basis vectors we would have obtained if we had actually constructed a basis in <xref ref="exercise-EE-C20" acro="EE.C20"/> rather than just computing the dimension.</p>
+                <p>A calculator will give us four eigenvectors of <m>A</m>, the two for <m>\lambda=2</m> being linearly independent presumably.  Or, by hand, we could find basis vectors for the three eigenspaces.  For <m>\lambda=3,\,-1</m> the eigenspaces have dimension one, and so any eigenvector for these eigenvalues will be multiples of the ones we use below.  For <m>\lambda=2</m> there are many different bases for the eigenspace, so your answer could vary.  Our eigenvectors are the basis vectors we would have obtained if we had actually constructed a basis in <xref ref="exercise-EE-C21" acro="EE.C21"/> rather than just computing the dimension.</p>
                 <p>By the construction in the proof of <xref ref="theorem-DC" acro="DC"/>, the required matrix <m>S</m> has columns that are four linearly independent eigenvectors of <m>A</m> and the diagonal matrix has the eigenvalues on the diagonal (in the same order as the eigenvectors in <m>S</m>).  Here are the pieces, <q>doing</q> the diagonalization,<me>\inverse{
                 \begin{bmatrix}
                 -1 &amp; 0 &amp; -3 &amp; 6\\
