@@ -77,6 +77,7 @@ Typo: Subsection MISLE.CIM, correct references to previous matrices (Carissa Rie
 Typo: Solution MM.T52, comma after infinitive phrase (Sam Webb)
 Typo: Example ESMS4, matrix is C, not A (Kelsy Bryson)
 Typo: Exercise PEE.T21, alpha, not lambda
+Typo: Exercise SD.C20, reference Exercise EE.C21, not EE.C20 (Mira Schoeberlein)
 
 
 v3.50 2015/12/30
